# spotify-codegen

./: .cache  .cookiecutter.json  .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Procfile  README.md  bring-back-spotify-album-code.py  main.py  noxfile.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: .travis.yml  CICD.yml  constraints.txt  github-actions.yml  release.yml  tests.yml
bbsac/: app.py  bbsac.py
bbsac/assets/: ga.js
bbsac/bbsac/: bbsac.py
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
html-mockup/: index.html
spotifyartcode/app/: app.py
spotifyartcode/cli/: sac.py
spotifycodegen/: cli.py  main.py
src/spotifycodegen/: __init__.py  __main__.py  cli.py  main.py
tests/: __init__.py  spotifyartcode.py  test_argparse.py  test_get_art_with_code.py  test_main.py  test_rgb_to_hex.py  test_save_art_with_code.py  test_spotifycodegen.py  test_uri_from_query.py  test_uri_from_url.py
tests_/: test_spotifycodegen.py
