[tool.poetry]
name = "spotifycodegen"
version = "0.1.2"
description = ""
authors = ["schuenemann"]
readme = "README.md"
repository = "https://github.com/tilschuenemann/spotifycodegen"
keywords = ["spotify","cover","art","spotify-api","scan","uri","url","query","spotipy","code"]
classifiers = ["Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"]

[tool.poetry.scripts]
scg = "spotifycodegen.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.21.0"
pillow = "^9.3.0"
colorthief = "^0.2.1"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
coverage = "^6.5.0"
mypy = "^0.990"
pytest = "^7.2.0"

[tool.black]
line-length=120
target-version = ['py310']

[tool.mypy]
mypy_path = "spotifycodegen/"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
